# pyteddy

./: .gitignore  README.md  _setup.cfg  activate  pyproject.toml  setup.cfg  setup.py
PACKAGE_NAME/PACKAGE_NAME/: LICENSE  README.md  setup.cfg
PACKAGE_NAME/PACKAGE_NAME/tests/: __init__.py
example/: pyvenv.cfg
example/example/: LICENSE  setup.cfg
example/example/tests/: __init__.py
pyteddy/: __init__.py  __main__.py  _db.py  _parser.py  config.db  create_template.py  templates.py
pyteddy/commands/: __init__.py  config.db  config.py  create_package.py  template.py
pyteddy/index/: __init__.py  config.py
pyteddy/pyteddy/: LICENSE  README.md  setup.cfg
pyteddy/pyteddy/tests/: __init__.py
pyteddy/teamplates/: LICENSE  setup.cfg
templates/: README.md
templates/tests/: __init__.py
test/test/: LICENSE  setup.cfg
test/test/tests/: __init__.py
tests/: __init__.py
