[metadata]
name = PACKAGE_NAME
version = 0.0.0
author = USER_NAME
author_email = USER_EMAIL
description = summary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ORGANISATION/REPOSITORY_NAME
project_urls =
Bug Tracker = https://github.com/ORGANISATION/REPOSITORY_NAME/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
