[metadata]
name = example
version = 0.0.0
author = r
author_email = us
description = summary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spralja/spralja
project_urls =
Bug Tracker = https://github.com/spralja/spralja/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
