[metadata]
name = $package_name
version = 0.0.0
author = $user_name
author_email = $user_email
description = summary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/$organisation/$repository_name
project_urls =
    Bug Tracker = https://github.com/$organisation/$repository_name/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
